--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,12 +10,14 @@
         android:id="@+id/imageView6"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:scaleType="fitXY"
         android:src="@drawable/bg_scene"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/id1"
         android:layout_width="364dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
@@ -23,6 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/id3"
             android:layout_width="134dp"
             android:layout_height="45dp">
 
@@ -49,10 +52,12 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <Space
+            android:id="@+id/id2"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/id4"
             android:layout_width="134dp"
             android:layout_height="45dp">
 
@@ -66,6 +71,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
             
             <LinearLayout
+                android:id="@+id/id5"
                 android:layout_width="91dp"
                 android:layout_height="27dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +88,7 @@
                     android:thumbTint="#00FFFFFF"
                     android:trackTint="#00FFFFFF" />
                 <Space
+                    android:id="@+id/id6"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"/>
@@ -96,6 +103,7 @@
                     android:thumbTint="#00FFFFFF"
                     android:trackTint="#00FFFFFF" />
                 <Space
+                    android:id="@+id/id7"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"/>
@@ -114,17 +122,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
+
     <ImageView
         android:id="@+id/ball"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="104dp"
 
         android:src="@drawable/ball_score_yes"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <ImageView
         android:id="@+id/buble"
@@ -140,34 +149,40 @@
         android:id="@+id/cube1"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="456dp"
         android:rotation="45"
         android:src="@drawable/cube1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.786"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.672" />
 
     <ImageView
         android:id="@+id/cube2"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginStart="260dp"
-        android:layout_marginTop="228dp"
         android:rotation="45"
         android:src="@drawable/cube2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.654" />
 
     <ImageView
         android:id="@+id/cube3"
         android:layout_width="125dp"
         android:layout_height="125dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="372dp"
         android:rotation="45"
         android:src="@drawable/cube3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.762"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.334" />
 
     <ImageView
         android:id="@+id/imageView9"
@@ -188,6 +203,7 @@
         app:layout_constraintStart_toStartOf="@+id/imageView9" />
 
     <ImageButton
+        android:id="@+id/id10"
         android:layout_width="51dp"
         android:layout_height="51dp"
         android:background="@drawable/home_sel"
